--- a/01/style.scss
+++ b/01/style.scss
@@ -1,4 +1,4 @@
-$mainColor: #272e52;
+// $mainColor: #272e52;
 $mainColor: #ffce3b;
 
 body {
@@ -68,30 +68,26 @@ body {
   }
 
   &__input,
-  .btn {
+  &__btn {
     font-size: 18px;
     border: none;
     margin: 10px 0;
     border-radius: 30px;
     font-family: "Nunito", sans-serif;
   }
-}
 
-.btn {
-  padding: 10px 40px;
-  color: #fff;
-  background-color: $mainColor;
-  cursor: pointer;
-  letter-spacing: 1.5px;
-  font-weight: 800;
-  transition: transform 0.5s, opacity 0.5s;
+  &__btn {
+    padding: 10px 40px;
+    color: #fff;
+    background-color: $mainColor;
+    cursor: pointer;
+    letter-spacing: 1.5px;
+    font-weight: 800;
+    transition: transform 0.5s, opacity 0.5s;
 
-  &:hover {
-    transform: scale(1.1);
-    opacity: 0.8;
+    &:hover {
+      transform: scale(1.1);
+      opacity: 0.8;
+    }
   }
-}
-
-.blue {
-  color: #00c0ff;
 }
