--- a/01/style.scss
+++ b/01/style.scss
@@ -2,92 +2,98 @@
 $mainColor: #ffce3b;
 
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #00c0ff;
-  background-image: url('./hero.jpg');
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
-  font-family: "Nunito", sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #00c0ff;
+    background-image: url('./hero.jpg');
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    font-family: 'Nunito', sans-serif;
 }
 
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
-  outline: none;
+    box-sizing: border-box;
+    outline: none;
 }
 
 //End Global Styles
 .form {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 50px;
-  border-radius: 20px;
-  background-color: #fff;
-  border-top: 10px solid $mainColor;
-
-
-
-  &__input {
-    background-color: #eee;
-    resize: none;
-    padding: 15px 30px;
-    width: 340px;
-
-    &--textarea {
-      height: 150px;
-    }
-  }
-
-  &__title {
-    font-weight: 800;
     position: relative;
-    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 50px;
+    border-radius: 20px;
+    background-color: #fff;
+    border-top: 10px solid $mainColor;
 
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: -10px;
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-      opacity: .1;
-      background-color: #00c0ff;
-      z-index: -1;
-      transform: scale(2);
+    &__title {
+        font-weight: 800;
+        position: relative;
+        z-index: 2;
+        cursor: default;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -15px;
+            left: -35px;
+            width: 70px;
+            height: 70px;
+            border-radius: 50%;
+            opacity: 0.1;
+            background-color: #00c0ff;
+            z-index: -1;
+            transition: transform 0.5s, opacity 0.5s;
+        }
+
+        &:hover {
+            &::before {
+                opacity: 0.5;
+                transform: scale(0.8);
+            }
+        }
     }
-  }
 
-  &__input,
-  &__btn {
-    font-size: 18px;
-    border: none;
-    margin: 10px 0;
-    border-radius: 30px;
-    font-family: "Nunito", sans-serif;
-  }
+    &__input {
+        background-color: #eee;
+        resize: none;
+        padding: 15px 30px;
+        width: 340px;
 
-  &__btn {
-    padding: 10px 40px;
-    color: #fff;
-    background-color: $mainColor;
-    cursor: pointer;
-    letter-spacing: 1.5px;
-    font-weight: 800;
-    transition: transform 0.5s, opacity 0.5s;
-
-    &:hover {
-      transform: scale(1.1);
-      opacity: 0.8;
+        &--textarea {
+            height: 150px;
+        }
     }
-  }
+
+    &__input,
+    &__btn {
+        font-size: 18px;
+        border: none;
+        margin: 10px 0;
+        border-radius: 30px;
+        font-family: 'Nunito', sans-serif;
+    }
+
+    &__btn {
+        padding: 10px 40px;
+        color: #fff;
+        background-color: $mainColor;
+        cursor: pointer;
+        letter-spacing: 1.5px;
+        font-weight: 800;
+        transition: transform 0.5s, opacity 0.5s;
+
+        &:hover {
+            transform: scale(1.1);
+            opacity: 0.8;
+        }
+    }
 }
