--- a/01/style.css
+++ b/01/style.css
@@ -8,11 +8,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 100vw;
   height: 100vh;
   font-family: 'Nunito', sans-serif;
@@ -22,7 +22,7 @@ body {
 *::after,
 *::before {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   outline: none;
 }
 
@@ -32,15 +32,15 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   padding: 50px;
   border-radius: 20px;
   background-color: #fff;
@@ -74,7 +74,7 @@ body {
 .form__title:hover::before {
   opacity: 0.5;
   -webkit-transform: scale(0.8);
-          transform: scale(0.8);
+  transform: scale(0.8);
 }
 
 .form__input {
@@ -88,7 +88,8 @@ body {
   height: 150px;
 }
 
-.form__input, .form__btn {
+.form__input,
+.form__btn {
   font-size: 18px;
   border: none;
   margin: 10px 0;
@@ -111,7 +112,8 @@ body {
 
 .form__btn:hover {
   -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
   opacity: 0.8;
 }
+
 /*# sourceMappingURL=style.css.map */
